k8s/flaskapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapi-deployment
  labels:
    app: flaskapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapi
  template:
    metadata:
      labels:
        app: flaskapi
    spec:
      containers:
        - name: flaskapi
          image: 'europe-west1-docker.pkg.dev/cmek-gke-demo/flask-api/flask-api:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
