k8s/flaskapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
  - port: 6000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapi
  type: NodePort
