k8s/flaskapp-network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: flaskapi-static-address
    # networking.gke.io/managed-certificates: flaskapi-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: flask-service
      port:
        number: 6000


#---
#apiVersion: networking.gke.io/v1
#kind: ManagedCertificate
#metadata:
#  name: flaskapi-cert
#spec:
#  domains:
#    - "jeremyto.altostrat.com"
